# RCM_Agentic_AI_Demo

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  docker_err
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  database.py  db_schema.py  main.py
backend/app/agents/: __init__.py  analytics.py  base.py  coding.py  collections.py  denial.py  eligibility.py  era_posting.py  event_bus.py  llm.py  llm_cache.py  scrubbing.py  task_runner.py  tracking.py
backend/app/api/: agents.py  claims.py  denials.py  deps.py  events.py  hitl.py  kpis.py  patients.py  scenarios.py
backend/app/data/: fixtures_loader.py
backend/app/mock_payer/: router.py
backend/app/models/: __init__.py  agent.py  domain.py  kpi.py
backend/app/orchestrator/: __init__.py  graph.py  scenarios.py
backend/app/tools/: __init__.py  analytics_tools.py  claim_tools.py  coding_tools.py  collections_tools.py  denial_tools.py  eligibility_tools.py  era_tools.py  patient_tools.py
backend/scripts/: seed_all.py
backend/tests/: conftest.py  test_agents_offline.py  test_agents_offline_analytics.py  test_agents_offline_collections.py  test_agents_offline_denial.py  test_agents_offline_eligibility.py  test_agents_offline_era.py  test_agents_offline_tracking.py  test_api_agents.py  test_api_claims.py  test_api_denials.py  test_api_hitl.py  test_api_kpis.py  test_api_patients.py  test_api_scenarios.py  test_smoke.py  test_tools_analytics.py  test_tools_claim.py  test_tools_coding.py  test_tools_collections.py  test_tools_denial.py  test_tools_era.py
(+49 files in other folders)
