[project]
name = "rcm-agentic-demo-backend"
version = "1.0.0"
description = "RCM Agentic AI Demo backend (FastAPI + LangGraph + DuckDB)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "duckdb>=1.1.0",
  "python-dotenv>=1.0.1",
  "faker>=30.0.0",
  "anthropic>=0.39.0",
  "langgraph>=0.2.40",
  "langchain-anthropic>=0.2.4",
  "langchain-core>=0.3.15",
  "jinja2>=3.1.4",
  "sse-starlette>=2.1.3",
  "httpx>=0.27.2",
  "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.7.0",
  "mypy>=1.13.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

# Pre-existing type errors in app/ — tracked for future clean-up, not enforced in CI.
[[tool.mypy.overrides]]
module = [
  "app.agents.llm",
  "app.agents.base",
  "app.agents.coding",
  "app.agents.scrubbing",
  "app.agents.denial",
  "app.agents.analytics",
  "app.api.claims",
  "app.api.patients",
  "app.api.denials",
  "app.api.kpis",
  "app.mock_payer.router",
  "app.orchestrator.graph",
]
ignore_errors = true
